# progetto-algoritmi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: relazione.tex
input/: analysis_edge_cases.v  logic_properties.v  single_gates.v  toposort.v  x_propagation.v
src/: analysis.cpp  analysis.h  ast.cpp  ast.h  circuit.hpp  expression.hpp  generic.hpp  main.cpp  parser.cpp  parser.h  run_tests.sh  simulation.cpp  simulation.h  truthvalue.cpp  truthvalue.h  utils.h
